💄 Styling bugfix for horizontal scroll

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -218,6 +218,10 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
+.top-navigation {
+  width: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
